err/bgp.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Bgp-0.2.egg-info'...
Listing './lib/python3.5/site-packages/bgp'...
Compiling './lib/python3.5/site-packages/bgp/bgplib.py'...
***   File "./lib/python3.5/site-packages/bgp/bgplib.py", line 168
    print "Bgp lib"
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bgp/userBgp.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (userBgp.py, line 44)
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/scapy'...
Listing './lib/python3.5/site-packages/scapy/arch'...
Listing './lib/python3.5/site-packages/scapy/arch/windows'...
Listing './lib/python3.5/site-packages/scapy/asn1'...
Listing './lib/python3.5/site-packages/scapy/contrib'...
Listing './lib/python3.5/site-packages/scapy/crypto'...
Listing './lib/python3.5/site-packages/scapy/layers'...
Listing './lib/python3.5/site-packages/scapy/modules'...
Listing './lib/python3.5/site-packages/scapy/tools'...
Listing './lib/python3.5/site-packages/scapy_python3-0.23.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/man'...
Listing './share/man/man1'...
Listing './share/python-wheels'...
